[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitcoin = { version = "0.30.1", features = ["serde"] }
bitcoincore-rpc = { git = "https://github.com/ValuedMammal/rust-bitcoincore-rpc.git", branch = "rawtx" }
clap = { version = "3.0", features = ["derive", "env"] }
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
priority-queue = "1.3.2"
regex-lite = "0.1.0"
serde = "1.0.188"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
