[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitcoin = { version = "0.32", features = ["serde"] }
bitcoincore-rpc = { git = "https://github.com/ValuedMammal/rust-bitcoincore-rpc.git", branch = "feat/raw-tx-info" }
clap = { version = "4", features = ["derive", "env"] }
lazy_static = "1.5"
log = "0.4.20"
pretty_env_logger = "0.5"
priority-queue = "2.1"
regex-lite = "0.1"
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
